Fix wcag contrast and previous/next blog post

--- a/resources/_wcag.scss
+++ b/resources/_wcag.scss
@@ -903,4 +903,44 @@ body.wcag-contrast {
       }
     }
   }
+
+  .mobile-menu {
+    background-color: black;
+  }
+
+  .mobile-menu .times span {
+    color: yellow;
+  }
+
+  .navigation-items__list-item > a {
+    svg {
+      path {
+        fill: yellow !important;
+      }
+    }
+  }
+
+  .navigation-items__list-item > a.active {
+    svg {
+      path {
+        fill: white !important;
+      }
+    }
+  }
+
+  .dots-navigation .dot {
+    box-shadow: 0 0 5px yellow inset !important;
+  }
+
+  .dots-navigation .dot.active {
+    background-color: yellow !important;
+  }
+
+  .hamburger {
+    svg {
+      path {
+        fill: yellow !important;
+      }
+    }
+  }
 }
